--- a/projet.ipynb
+++ b/projet.ipynb
@@ -10,14 +10,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.114065Z",
      "start_time": "2023-05-20T17:35:59.045606Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "import PIL\n",
     "from PIL import Image\n",
@@ -41,7 +56,12 @@
     "    return sp.fft.dct( sp.fft.dct( a, axis=0, norm='ortho' ), axis=1, norm='ortho' )\n",
     "\n",
     "def idct2(a):\n",
-    "    return sp.fft.idct( sp.fft.idct( a, axis=0 , norm='ortho'), axis=1 , norm='ortho')\n"
+    "    return sp.fft.idct( sp.fft.idct( a, axis=0 , norm='ortho'), axis=1 , norm='ortho')\n",
+    "\n",
+    "a = [['0', '0', '0', '0', '0', '0', '0', '0'], ['0', '0', '0', '0', '0', '0', '0', '0'], ['0', '0', '0', '0', '0', '0', '0', '0'], ['0', '0', '0', '0', '0', '0', '0', '0'], ['0', '0', '0', '0', '0', '0', '0', '0'], ['0', '0', '0', '0', '0', '0', '0', '0'], ['0', '0', '0', '0', '0', '0', '0', '0'], ['0', '0', '0', '0', '0', '0', '0', '0']]\n",
+    "a = np.array(a)\n",
+    "\n",
+    "print(idct2(a))"
    ]
   },
   {
@@ -66,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.114818Z",
@@ -102,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.115715Z",
@@ -135,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 40,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.115891Z",
@@ -159,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 41,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.122113Z",
@@ -201,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 42,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.122527Z",
@@ -235,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 43,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.122571Z",
@@ -246,6 +266,7 @@
    "source": [
     "\n",
     "def mult_mat(matrice):\n",
+    "    matrice2 = matrice.copy()\n",
     "    for i in range(matrice.shape[0]):\n",
     "        for j in range(0, matrice.shape[1]//2):\n",
     "            matrice[i][j*2][1] = matrice2[i][j][1]\n",
@@ -273,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 44,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.122610Z",
@@ -317,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 45,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.122646Z",
@@ -343,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 46,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.122713Z",
@@ -372,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 47,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.123040Z",
@@ -406,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 48,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.123081Z",
@@ -433,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 49,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.805819Z",
@@ -466,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 50,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-20T17:35:59.812363Z",
@@ -512,19 +533,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['0', '0', '0', '0', '0', '0', '0', '0'], ['0', '0', '0', '0', '0', '0', '0', '0'], ['0', '0', '0', '0', '0', '0', '0', '0'], ['0', '0', '0', '0', '0', '0', '0', '0'], ['0', '0', '0', '0', '0', '0', '0', '0'], ['0', '0', '0', '0', '0', '0', '0', '0'], ['0', '0', '0', '0', '0', '0', '0', '0'], ['0', '0', '0', '0', '0', '0', '0', '0']]\n",
+      "[['0' '0' '0' '0' '0' '0' '0' '0']\n",
+      " ['0' '0' '0' '0' '0' '0' '0' '0']\n",
+      " ['0' '0' '0' '0' '0' '0' '0' '0']\n",
+      " ['0' '0' '0' '0' '0' '0' '0' '0']\n",
+      " ['0' '0' '0' '0' '0' '0' '0' '0']\n",
+      " ['0' '0' '0' '0' '0' '0' '0' '0']\n",
+      " ['0' '0' '0' '0' '0' '0' '0' '0']\n",
+      " ['0' '0' '0' '0' '0' '0' '0' '0']]\n"
+     ]
+    },
+    {
      "ename": "IndexError",
-     "evalue": "list index out of range",
+     "evalue": "tuple index out of range",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[188], line 47\u001b[0m\n\u001b[0;32m     43\u001b[0m     \u001b[39m# Retourne la matrice de l'image RGB\u001b[39;00m\n\u001b[0;32m     44\u001b[0m     \u001b[39mreturn\u001b[39;00m image\n\u001b[1;32m---> 47\u001b[0m decompress_image_from_file(\u001b[39m'\u001b[39;49m\u001b[39mno_compression.txt\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-      "Cell \u001b[1;32mIn[188], line 16\u001b[0m, in \u001b[0;36mdecompress_image_from_file\u001b[1;34m(input_file)\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[39m# Initialisation de la matrice de l'image\u001b[39;00m\n\u001b[0;32m     14\u001b[0m image \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros((height, width, \u001b[39m3\u001b[39m), dtype\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39muint8)\n\u001b[1;32m---> 16\u001b[0m \u001b[39mprint\u001b[39m(f\u001b[39m.\u001b[39;49mreadlines()[\u001b[39m1\u001b[39;49m])\n\u001b[0;32m     18\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(height):\n\u001b[0;32m     19\u001b[0m     \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(width):\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+      "Cell \u001b[1;32mIn[51], line 67\u001b[0m\n\u001b[0;32m     63\u001b[0m     \u001b[39m# Retourne la matrice de l'image RGB\u001b[39;00m\n\u001b[0;32m     64\u001b[0m     \u001b[39mreturn\u001b[39;00m image\n\u001b[1;32m---> 67\u001b[0m decompress_image_from_file(\u001b[39m'\u001b[39;49m\u001b[39mno_compression.txt\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "Cell \u001b[1;32mIn[51], line 34\u001b[0m, in \u001b[0;36mdecompress_image_from_file\u001b[1;34m(input_file)\u001b[0m\n\u001b[0;32m     32\u001b[0m     liste_bloc_Y \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(liste_bloc_Y)\n\u001b[0;32m     33\u001b[0m     \u001b[39mprint\u001b[39m(liste_bloc_Y)\n\u001b[1;32m---> 34\u001b[0m     liste_bloc_Y \u001b[39m=\u001b[39m idct2(bloc_Y)\n\u001b[0;32m     36\u001b[0m     image[i\u001b[39m*\u001b[39m\u001b[39m8\u001b[39m:(i\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m)\u001b[39m*\u001b[39m\u001b[39m8\u001b[39m, j\u001b[39m*\u001b[39m\u001b[39m8\u001b[39m:(j\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m)\u001b[39m*\u001b[39m\u001b[39m8\u001b[39m, \u001b[39m0\u001b[39m] \u001b[39m=\u001b[39m bloc_Y\n\u001b[0;32m     38\u001b[0m \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(bloc_h\u001b[39m*\u001b[39mbloc_l\u001b[39m+\u001b[39m\u001b[39m4\u001b[39m,\u001b[39m2\u001b[39m\u001b[39m*\u001b[39mbloc_h\u001b[39m*\u001b[39mbloc_l\u001b[39m+\u001b[39m\u001b[39m4\u001b[39m):\n",
+      "Cell \u001b[1;32mIn[37], line 23\u001b[0m, in \u001b[0;36midct2\u001b[1;34m(a)\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39midct2\u001b[39m(a):\n\u001b[1;32m---> 23\u001b[0m     \u001b[39mreturn\u001b[39;00m sp\u001b[39m.\u001b[39;49mfft\u001b[39m.\u001b[39;49midct( sp\u001b[39m.\u001b[39;49mfft\u001b[39m.\u001b[39;49midct( a, axis\u001b[39m=\u001b[39;49m\u001b[39m0\u001b[39;49m , norm\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mortho\u001b[39;49m\u001b[39m'\u001b[39;49m), axis\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m , norm\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mortho\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "File \u001b[1;32mc:\\Users\\arias\\miniconda3\\lib\\site-packages\\scipy\\fft\\_backend.py:25\u001b[0m, in \u001b[0;36m_ScipyBackend.__ua_function__\u001b[1;34m(method, args, kwargs)\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[39mif\u001b[39;00m fn \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m     24\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mNotImplemented\u001b[39m\n\u001b[1;32m---> 25\u001b[0m \u001b[39mreturn\u001b[39;00m fn(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "File \u001b[1;32mc:\\Users\\arias\\miniconda3\\lib\\site-packages\\scipy\\fft\\_pocketfft\\realtransforms.py:33\u001b[0m, in \u001b[0;36m_r2r\u001b[1;34m(forward, transform, x, type, n, axis, norm, overwrite_x, workers, orthogonalize)\u001b[0m\n\u001b[0;32m     31\u001b[0m     tmp, copied \u001b[39m=\u001b[39m _fix_shape_1d(tmp, n, axis)\n\u001b[0;32m     32\u001b[0m     overwrite_x \u001b[39m=\u001b[39m overwrite_x \u001b[39mor\u001b[39;00m copied\n\u001b[1;32m---> 33\u001b[0m \u001b[39melif\u001b[39;00m tmp\u001b[39m.\u001b[39;49mshape[axis] \u001b[39m<\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m     34\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39minvalid number of data points (\u001b[39m\u001b[39m{0}\u001b[39;00m\u001b[39m) specified\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     35\u001b[0m                      \u001b[39m.\u001b[39mformat(tmp\u001b[39m.\u001b[39mshape[axis]))\n\u001b[0;32m     37\u001b[0m out \u001b[39m=\u001b[39m (tmp \u001b[39mif\u001b[39;00m overwrite_x \u001b[39melse\u001b[39;00m \u001b[39mNone\u001b[39;00m)\n",
+      "\u001b[1;31mIndexError\u001b[0m: tuple index out of range"
      ]
     }
    ],
@@ -535,6 +574,7 @@
     "        # Lecture de la taille de l'image depuis la deuxième ligne\n",
     "\n",
     "        image_size = (f.readlines()[1].split())\n",
+    "        f.seek(0)\n",
     "\n",
     "        # Calcul des dimensions de l'image\n",
     "        height, width = int(image_size[0]), int(image_size[1])\n",
@@ -545,32 +585,51 @@
     "        # Initialisation de la matrice de l'image\n",
     "        image = np.zeros((height, width, 3), dtype=np.uint8)\n",
     "\n",
-    "        print(f.readlines()[1])\n",
+    "        liste_bloc_Y = []\n",
+    "        liste_bloc_Cb = []\n",
+    "        liste_bloc_Cr = []\n",
     "\n",
     "        for i in range(height):\n",
     "            for j in range(width):\n",
     "\n",
     "                for k in range(4,bloc_h*bloc_l+4):\n",
-    "                    print(k)\n",
     "                    bloc_Y = f.readlines()[k]\n",
-    "                    bloc_Y = idct2(bloc_Y)\n",
+    "                    bloc_Y = list(bloc_Y.split())\n",
+    "                    for i in range(0, 64, 8):\n",
+    "                        sous_liste = bloc_Y[i:i+8]\n",
+    "                        liste_bloc_Y.append(sous_liste)\n",
+    "                    f.seek(0)\n",
+    "                    print(liste_bloc_Y)\n",
+    "                    liste_bloc_Y = np.array(liste_bloc_Y)\n",
+    "                    print(liste_bloc_Y)\n",
+    "                    liste_bloc_Y = idct2(bloc_Y)\n",
     "\n",
     "                    image[i*8:(i+1)*8, j*8:(j+1)*8, 0] = bloc_Y\n",
     "\n",
     "                for l in range(bloc_h*bloc_l+4,2*bloc_h*bloc_l+4):\n",
-    "                    bloc_Cb = f.readlines()[l]\n",
-    "                    bloc_Cb = idct2(bloc_Cb)\n",
+    "                    bloc_Cb = list(f.readlines()[l].split)\n",
+    "                    for i in range(0, 64, 8):\n",
+    "                        sous_liste = bloc_Cb[i:i+8]\n",
+    "                        liste_bloc_Cb.append(sous_liste)\n",
+    "                    f.seek(0)\n",
+    "                    liste_bloc_Cb = idct2(bloc_Cb)\n",
     "\n",
     "                    image[i*8:(i+1)*8, j*8:(j+1)*8, 1] = bloc_Cb\n",
     "\n",
     "                for m in range(2*bloc_h*bloc_l+4,3*bloc_h*bloc_l+4):\n",
-    "                    bloc_Cr = f.readlines()[m]\n",
-    "                    bloc_Cr = idct2(bloc_Cr)\n",
+    "                    bloc_Cr = list(f.readlines()[m].split)\n",
+    "                    for i in range(0, 64, 8):\n",
+    "                        sous_liste = bloc_Cr[i:i+8]\n",
+    "                        liste_bloc_Cr.append(sous_liste)\n",
+    "                    f.seek(0)\n",
+    "                    liste_bloc_Cr = idct2(bloc_Cr)\n",
     "\n",
     "                    image[i*8:(i+1)*8, j*8:(j+1)*8, 2] = bloc_Cr\n",
     "\n",
     "    # Conversion de l'espace de couleur YCbCr en RGB\n",
     "    image = YCbCR_en_RGB(image)\n",
+    "\n",
+    "    f.close()\n",
     "\n",
     "    # Retourne la matrice de l'image RGB\n",
     "    return image\n",
